test/TestSuite/Scheduler/Errors/task_pred_before_2.tjp
project "Test" 2010-07-12 +1m

task t1 "T1" {
  duration 1w
}
# MARK: error 7 task_pred_before
task t2 "T2" {
  depends !t1 { gapduration 3d }
  duration 6d
  end 2010-07-26
}
